--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
+<!DOCTYPE html>
 <html>
     <head>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+		<title> Simple Interest Calculator </title>
+		<script src="script.js"></script>
+		<link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
 
         Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
-
-        <button onclick="compute()">Compute</button>
-    </body>
+        <br>
+		Rate <input type="range" onchange="disp_rate_range(this.value)" min=0 max=20 step=0.25 value=10.25 id="rate">  
+		<span id="rate_span">10.25%</span><br/>
+        <br>
+		No. of Years <input type="number" list="yearsoptions" id="years">  <br/>
+		<datalist id="yearsoptions">
+			<option value=1></option>
+			<option value=2></option>
+			<option value=3></option>
+			<option value=4></option>
+			<option value=5></option>
+			<option value=6></option>
+			<option value=7></option>
+			<option value=8></option>
+			<option value=9></option>
+			<option value=10></option>
+		</datalist>
+		<br>
+        <button onclick="compute()">Compute Interest</button>
+		<span id="result_span">a</span><br>
+		<br>
+		<br>
+		<footer>&copy; That Floppy 2021</footer>
+    </div>
 </html>
