--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</datalist>
 		<br>
         <button onclick="compute()">Compute Interest</button>
-		<span id="result_span">a</span><br>
+		<span id="result_span"></span><br>
 		<br>
 		<br>
 		<footer>&copy; That Floppy 2021</footer>
